force-app/main/default/objects/vlocity_cmt__PremisesPartyRelationship__c/fields/vlocity_cmt__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PartyId__c</fullName>
    <label>Party</label>
    <referenceTo>vlocity_cmt__Party__c</referenceTo>
    <relationshipLabel>PremisesPartyRelationships</relationshipLabel>
    <relationshipName>PremisesPartyRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>