force-app/main/default/objects/vlocity_cmt__PremisesPartyRelationship__c/fields/vlocity_cmt__PartyRelationshipTypeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PartyRelationshipTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Relationship Type</label>
    <referenceTo>vlocity_cmt__PartyRelationshipType__c</referenceTo>
    <relationshipLabel>PremisesPartyRelationships</relationshipLabel>
    <relationshipName>PremisesPartyRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>